Refs #99273 fixed z-index for edit bar sub ipad resolution:
- enlarge width of frontpage leaf logo to 100% as it fits at 100%

--- a/src/forests/theme/skins/fise_theme_styles/admin.less
+++ b/src/forests/theme/skins/fise_theme_styles/admin.less
@@ -100,6 +100,9 @@ div.formControls {
 }
 
 @media (max-width: 767px) {
+  #edit-bar {
+    z-index: 88;
+  }
   .contentActions,
   .contentActions::after {
     clear: both;
