--- a/src/forests/theme/skins/fise_theme_styles/slider.css
+++ b/src/forests/theme/skins/fise_theme_styles/slider.css
@@ -270,6 +270,7 @@
 
 @media (max-width: 767px) {
   .frontpage-image-wrapper {
+    width: 100%;
     max-width: 100%;
     margin-top: 4rem;
   }
